--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <div id="header-carousel" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="w-100" src="https://z-p3-scontent-mba1-1.xx.fbcdn.net/v/t39.30808-6/310951492_481379700680099_307531240643992272_n.jpg?_nc_cat=107&ccb=1-7&_nc_sid=8bfeb9&_nc_ohc=jAJi4LZFw-QAX9C7LeV&_nc_ht=z-p3-scontent-mba1-1.xx&oh=00_AfDqdX-5PDPkaPv6RQwKFInS1dMQW1eXWgUbe9PVaaFG2Q&oe=640E0A9A" alt="Image">
+                    <img class="w-100" src="" alt="Image">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
                             <h4 class="text-white text-uppercase mb-md-3">Adventure & Fitness</h4>
