--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <div id="header-carousel" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="w-100" src="https://z-p3-scontent-mba1-1.xx.fbcdn.net/v/t39.30808-6/323442812_691778002545284_5002139036770931547_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=8bfeb9&_nc_ohc=wwrH97KN1h0AX8fz3wI&_nc_ht=z-p3-scontent-mba1-1.xx&oh=00_AfAQzNhRxCS025HCKyC98cYJ_uKTj8iYoVCEwPJPhWJWyg&oe=641423EF" alt="Image">
+                    <img class="w-100" src="https://z-p3-scontent.fmba2-1.fna.fbcdn.net/v/t39.30808-6/334974427_1421237828714465_5230938496846870167_n.jpg?_nc_cat=102&ccb=1-7&_nc_sid=8bfeb9&_nc_ohc=a7JcQumz2PkAX9hUPI5&_nc_ht=z-p3-scontent.fmba2-1.fna&oh=00_AfCdsqWqEHUC0Dd-JqKXTpEOp72z4-eLVGPoeMjtJU51Qw&oe=6414EA95" alt="Image">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
                             <h4 class="text-white text-uppercase mb-md-3">Adventure & Fitness</h4>
@@ -146,7 +146,7 @@
             <div class="row">
                 <div class="col-lg-6" style="min-height: 500px;">
                     <div class="position-relative h-100">
-                        <img class="position-absolute w-100 h-100" src="https://z-p3-scontent-mba1-1.xx.fbcdn.net/v/t39.30808-6/332903269_1373030643551966_5675692030731575048_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=8bfeb9&_nc_ohc=VOUK3c3gql0AX9wl111&_nc_ht=z-p3-scontent-mba1-1.xx&oh=00_AfBqRovEJR90K3eDhsPHg4hIKDTu8pDHDSAd0LE4dDndnA&oe=640DC492" style="object-fit: cover;">
+                        <img class="https://z-p3-scontent.fmba2-1.fna.fbcdn.net/v/t39.30808-6/332903269_1373030643551966_5675692030731575048_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=8bfeb9&_nc_ohc=09BVj2zalA0AX-JTRbI&_nc_ht=z-p3-scontent.fmba2-1.fna&oh=00_AfD8WqF8gywypjP2xGOCKFOO8GgfKki--Af9DW9mvLEs1Q&oe=6415AD92" style="object-fit: cover;">
                     </div>
                 </div>
                 <div class="col-lg-6 pt-5 pb-lg-5">
@@ -158,10 +158,10 @@
                             Whether you are new to the continent or an experienced safari-goer, there’s always more to learn, new places to discover, fresh experiences to have, strange and wonderful wildlife to see, and absorbing people to meet.</p>
                         <div class="row mb-4">
                             <div class="col-6">
-                                <img class="img-fluid" src="https://z-p3-scontent-mba1-1.xx.fbcdn.net/v/t39.30808-6/332903269_1373030643551966_5675692030731575048_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=8bfeb9&_nc_ohc=8zKE7XLUz10AX8Vz6L4&_nc_ht=z-p3-scontent-mba1-1.xx&oh=00_AfB2cByb6XC-8PP5teU3j1RXQ9iTSzo3ILKui4S9zQLYDQ&oe=6413B352" alt="">
+                                <img class="img-fluid" src="https://z-p3-scontent.fmba2-1.fna.fbcdn.net/v/t39.30808-6/326377753_563169345714651_6068613051716088771_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=8bfeb9&_nc_ohc=GvuZCPAUUyQAX_zz3t_&_nc_ht=z-p3-scontent.fmba2-1.fna&oh=00_AfC7a-QYujwWlj4gSNYaox6YkToYF2dKDCOTC99_kxZOZw&oe=64149FA3" alt="">
                             </div>
                             <div class="col-6">
-                                <img class="img-fluid" src="https://z-p3-scontent-mba1-1.xx.fbcdn.net/v/t39.30808-6/326377753_563169345714651_6068613051716088771_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=8bfeb9&_nc_ohc=n8Gf_9e49tUAX83tyzD&_nc_ht=z-p3-scontent-mba1-1.xx&oh=00_AfAFIlSBPHWGxl8rj0A26pNKdqGH3QKLD3t_LpAfCMRveA&oe=640CB6A3" alt="">
+                                <img class="img-fluid" src="https://z-p3-scontent.fmba2-1.fna.fbcdn.net/v/t39.30808-6/329728741_529185846002125_2675929427623897886_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=8bfeb9&_nc_ohc=jpH9tSY4edkAX-xwlEi&_nc_ht=z-p3-scontent.fmba2-1.fna&oh=00_AfBmj2C5Orgb4FIZsb9ChG7r5JeXREBVMJDASbiCGVCOzQ&oe=64157AC1" alt="">
                             </div>
                         </div>
                         <a href="" class="btn btn-primary mt-1">Book Now</a>
